[gd_scene load_steps=17 format=3 uid="uid://cyb5dc1k2qepn"]

[ext_resource type="Script" path="res://scripts/Enemies/Wanderer/wanderer.gd" id="1_02eas"]
[ext_resource type="Texture2D" uid="uid://bvv2ixc60sivy" path="res://Assets/enemies/Wanderer/wanderer.png" id="1_vvhct"]
[ext_resource type="Script" path="res://scripts/Enemies/Wanderer/WandererStatemachine.gd" id="3_gkwtq"]
[ext_resource type="Script" path="res://scripts/Enemies/Wanderer/wanderer_walk.gd" id="4_hj3jt"]
[ext_resource type="Script" path="res://scripts/Enemies/Wanderer/wanderer_chase.gd" id="5_s03io"]
[ext_resource type="Script" path="res://scripts/Enemies/Wanderer/wanderer_attack.gd" id="6_73cjy"]
[ext_resource type="AudioStream" uid="uid://bcmwdpxsj1pja" path="res://Assets/enemies/Wanderer/swing.wav" id="7_tvmam"]
[ext_resource type="AudioStream" uid="uid://b1fohdpk6b1u1" path="res://Assets/enemies/Wanderer/windup.wav" id="8_4myvg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dyyah"]
size = Vector2(35.5, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ffo8h"]
size = Vector2(27, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijkdj"]
size = Vector2(380, 137)

[sub_resource type="Animation" id="Animation_f3wqe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("swing_hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_orosr"]
resource_name = "wanderer_attack"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("swing_hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WandererStatemachine/wanderer_attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_dash"
}, {
"args": [],
"method": &"_break"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WandererStatemachine/wanderer_attack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_sound"
}]
}

[sub_resource type="Animation" id="Animation_yltap"]
resource_name = "wanderer_idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("swing_hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_161wq"]
resource_name = "wanderer_trot"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uwq1s"]
_data = {
"RESET": SubResource("Animation_f3wqe"),
"wanderer_attack": SubResource("Animation_orosr"),
"wanderer_idle": SubResource("Animation_yltap"),
"wanderer_trot": SubResource("Animation_161wq")
}

[node name="wanderer" type="CharacterBody2D"]
position = Vector2(9, -2)
collision_layer = 4
script = ExtResource("1_02eas")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_vvhct")
offset = Vector2(-4, -8)
hframes = 4
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(3.75, 6)
shape = SubResource("RectangleShape2D_dyyah")

[node name="body_hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="body_hitbox"]
position = Vector2(-4, -7)
polygon = PackedVector2Array(-11, -13, -11, 40, 32, 40, 32, 11, 10, 11, 10, -13)

[node name="swing_hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="swing_hitbox"]
position = Vector2(-29, 9)
scale = Vector2(1, -1)
shape = SubResource("RectangleShape2D_ffo8h")
disabled = true

[node name="walkSight" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walkSight"]
position = Vector2(0, -47.5)
shape = SubResource("RectangleShape2D_ijkdj")

[node name="edge_detect_left" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-19, 10)
target_position = Vector2(0, 28)

[node name="edge_detect_right" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(19, 10)
target_position = Vector2(0, 27)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uwq1s")
}

[node name="WandererStatemachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "wanderer")]
script = ExtResource("3_gkwtq")
initial_state = NodePath("wanderer_walk")
wanderer = NodePath("..")

[node name="wanderer_walk" type="Node" parent="WandererStatemachine"]
script = ExtResource("4_hj3jt")

[node name="wanderer_chase" type="Node" parent="WandererStatemachine"]
script = ExtResource("5_s03io")

[node name="wanderer_attack" type="Node" parent="WandererStatemachine"]
script = ExtResource("6_73cjy")

[node name="sounds" type="Node" parent="."]

[node name="swing" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("7_tvmam")
volume_db = -4.0

[node name="windup" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("8_4myvg")
volume_db = -4.0

[connection signal="body_entered" from="body_hitbox" to="." method="_on_body_hitbox_body_entered"]
[connection signal="body_entered" from="swing_hitbox" to="." method="_on_swing_hitbox_body_entered"]
[connection signal="body_entered" from="walkSight" to="WandererStatemachine/wanderer_walk" method="_on_walk_sight_body_entered"]
